react-native-element/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-native-element
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-native-element
  template:
    metadata:
      labels:
        app: react-native-element
    spec:
      containers:
        - name: react-native-element
          image: ddecrulle/react-native-element
          imagePullPolicy: Always
