react-native-element/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-native-element
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: react-native-element
