react-native-element/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-native-element
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - react-native-element-demo.dev.insee.io
  rules:
    - host: react-native-element-demo.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: react-native-element
              servicePort: http
